--- a/create-order/create-order.component.html
+++ b/create-order/create-order.component.html
@@ -1,11 +1,89 @@
-<h1>Create New Order</h1>
-<form #form="ngForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form">
-  <div class="card mt-3">
-    <div class="card-body">
+<div class="blank-layout-container justify-content-center align-items-center bg-light-primary">
+    <div
+      class="position-relative row w-100 h-100 bg-gredient justify-content-center"
+    >
+      <div class="col-lg-4 d-flex align-items-center">
+        <mat-card class="cardWithShadow boxed-auth">
+          <mat-card-content class="p-32">
+  
+            <div class="m-t-15">
+              <h2 class="text-center text-sky-900">Create New Order</h2>
+            </div>
+  
+            <form #form="ngForm" [formGroup]="orderForm" (submit)="onSubmit(form.value)"class="form m-t-30">
+              <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
+                >Product</mat-label
+              >
+              <mat-form-field class="form-group" appearance="outline" class="w-100" color="primary">
+                <input name= "product" matInput type="text" formControlName="product" minlength="3" ngModel/>
+              </mat-form-field>
+  
+              <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
+                >Quantity</mat-label
+              >
+              <mat-form-field class="form-group" appearance="outline" class="w-100" color="primary">
+                <input name = "quantity" matInput type="number" formControlName="quantity" ngModel/>
+              </mat-form-field>
 
-        <div class="form-group">
+
+              <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Order Side</mat-label>
+              <mat-form-field class="form-group" appearance="outline" class="w-100">
+                <mat-label>Select order side</mat-label>
+                <mat-select formControlName="orderside" name="orderside" appearance="outline" color="primary" ngModel>
+                <mat-option 
+                *ngFor="let orderside of ordersides" [value]="orderside.value">
+                {{orderside.viewValue}}
+                </mat-option>
+                </mat-select>
+              </mat-form-field>
+
+
+              <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Order Type</mat-label>
+              <mat-form-field class="form-group" appearance="outline" class="w-100">
+                <mat-label>Select order type</mat-label>
+                <mat-select formControlName="ordertype" name="ordertype" appearance="outline" color="primary" ngModel>
+                <mat-option 
+                *ngFor="let ordertype of ordertypes" [value]="ordertype.value">
+                {{ordertype.viewValue}}
+                </mat-option>
+                </mat-select>
+              </mat-form-field>
+  
+              <!-- PRICE -->
+              <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
+                >Price</mat-label
+              >
+              <mat-form-field class="form-group" appearance="outline" class="w-100" color="primary">
+                <input name="price" matInput type="number" step="any" formControlName="price" ngModel/>
+                <span matTextPrefix>$&nbsp;</span>
+              </mat-form-field>
+  
+              <a href="#" mat-flat-button color="primary" class="w-100">
+                Submit
+              </a>
+            </form>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+
+  <!-- [routerLink]="['']" -->
+  
+
+
+
+
+
+<!-- 
+<form #form="ngForm" [formGroup]="orderForm" (ngSubmit)="onSubmit()" class="form">
+  <div class="card mt-3 cardWithShadow boxed-auth round">
+    <h2 class="pl-32 pb-16">Create New Order</h2>
+    <div class="card-body p-32">
+
+        <div class="form-group round ">
             <label for="product">Product</label>
-            <input id="product" type="text" formControlName="product" class="form-control"
+            <input id="product" type="text" formControlName="product" class="form-control round" minlength="4"
                 [ngClass]="{ 'is-invalid': form.submitted && controls.product.invalid }">
 
             <div *ngIf="form.submitted && controls.product.invalid" class="text-danger">
@@ -19,29 +97,49 @@
             <input id="quantity" type="number" formControlName="quantity" class="form-control"
                 [ngClass]="{ 'is-invalid': form.submitted && controls.quantity.invalid }">
 
-            <div *ngIf="form.submitted && controls.product.invalid" class="text-danger">
+            <div *ngIf="form.submitted && controls.quantity.invalid" class="text-danger">
             <small *ngIf="controls.quantity.errors?.required">Quantity is required.</small>
-            <small *ngIf="controls.quantity.errors?.email">Quantity is invalid.</small>
+            <small *ngIf="controls.quantity.errors?.quantity">Quantity is invalid.</small>
             </div>
         </div>
 
         <div class="form-group">
             <label for="orderside">Order Side</label>
-            <input id="orderside" type="text" formControlName="orderside" class="form-control"
+
+            <select class="form-select" aria-label="order side" formControlName="orderside"
                 [ngClass]="{ 'is-invalid': form.submitted && controls.orderside.invalid }">
+                <option></option>
+                <option value="BUY">BUY</option>
+                <option value="SELL">SELL</option>
+            </select>
 
             <div *ngIf="form.submitted && controls.orderside.invalid" class="text-danger">
-            <small *ngIf="controls.product.errors?.required">Quantity is required.</small>
-            <!-- <small *ngIf="controls.email.errors?.email">Quantity is invalid.</small> -->
-            </div>
+            <small *ngIf="controls.orderside.errors?.required">Order side is required.</small>
+        
+            </div> 
         </div>
 
         <div class="form-group">
-            <label for="password">Password</label>
-            <input id="password" type="password" formControlName="password" class="form-control"
-                [ngClass]="{ 'is-invalid': form.submitted && controls.password.invalid }">
-            <div *ngIf="form.submitted && controls.password.invalid" class="text-danger">
-            <small *ngIf="controls.password.errors?.required">Password is required.</small>
+            <label for="ordertype">Order Type</label>
+
+            <select class="form-select" aria-label="order type" formControlName="ordertype"
+                [ngClass]="{ 'is-invalid': form.submitted && controls.ordertype.invalid }">
+                <option value="MARKET">MARKET</option>
+                <option value="LIMIT">LIMIT</option>
+            </select>
+
+            <div *ngIf="form.submitted && controls.ordertype.invalid" class="text-danger">
+            <small *ngIf="controls.ordertype.errors?.required">Order type is required.</small>
+           
+            </div> 
+        </div>
+
+        <div class="form-group">
+            <label for="price">Price</label>
+            <input id="price" type="number" step="any" formControlName="price" class="form-control"
+                [ngClass]="{ 'is-invalid': form.submitted && controls.price.invalid }">
+            <div *ngIf="form.submitted && controls.price.invalid" class="text-danger">
+            <small *ngIf="controls.price.errors?.required">Price is required.</small>
             </div>
 
       </div>
@@ -50,4 +148,4 @@
       </div>
     </div>
   </div>
-</form>
+</form> -->
