--- a/main/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/main/src/app/layouts/full/sidebar/sidebar.component.html
@@ -7,21 +7,21 @@
     <div class="bg-light-primary d-flex align-items-center rounded p-20 m-t-20">
       <div>
         <h5 class="mat-subtitle-1 f-s-16 f-w-600 m-b-8">
-          Unlimied <br />Access
+          Easy Online <br />Trading
         </h5>
         <a
           mat-flat-button
           color="primary"
-          href="https://adminmart.com/product/modernize-angular-admin-dashboard/"
-          target="_blank"
+          href="#"
+          [routerLink]="['dashboard']"
           class="d-flex justify-content-center"
         >
-          Upgrade
+          Start
         </a>
       </div>
       <img
         src="/assets/images/backgrounds/rocket.png"
-        alt="imgae"
+        alt="image"
         class="side-img"
       />
     </div>
